# Feather_SIMD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_zh.md
.github/workflows/: cmake-multi-platform.yml
cmake/: TinySimdEngineConfig.cmake.in
core/: README.md  avx2.hpp  base.hpp  neon.hpp  scalar.hpp  tiny_simd.hpp
docs/: Refactor.md
scripts/: README.md  build_and_test.sh  build_with_opencv.sh  check_dependencies.sh
test/: CMakeLists.txt  README.md
test/benchmarks/: CMakeLists.txt
test/opencv_compare/: README.md
test/unit_tests/: CMakeLists.txt  conversion_test.cpp  get_low_high_fallback_test.cpp  get_low_high_test.cpp  neon_datatypes_test.cpp  opencv_comparison_test.cpp  overflow_test.cpp  sign_conversion_test.cpp  simd_basic_test.cpp  simd_ops_test.cpp  vec2f_neon_test.cpp  width_conversion_test.cpp
